# fortls-lfortran

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json
client/src/: extension.ts
server/: setup.cfg
server/src/lflsp/: lfortran_accessor.py  lfortran_language_server.py
