[metadata]
name = lflsp
version = 0.1
author = LCompilers
description = LFortran language server protocol (LSP) implementation for FortLS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fortran-lang/fortls
project_urls =
    Bug Tracker = https://github.com/fortran-lang/fortls/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    attrs==24.3.0
    cattrs==24.1.2
    lsprotocol==2023.0.1
    pygls==1.3.1

[options.packages.find]
where = src
